# qa-auto-engineer-python-project-241

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml  ruff.toml
gendiff/: __init__.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: find_difference.py  gendiff.py  parser.py
tests/: test_gendiff.py
